# mbed6_custom_targets

./: README.md  mbed-os.lib
mbed-external-targets/: CMakeLists.txt
mbed-external-targets/TARGET_Atmel/: CMakeLists.txt  custom_targets.json  mbed_rtx.h
mbed-external-targets/TARGET_Atmel/TARGET_SAM_CortexM0P/: CMakeLists.txt  USBPhyHw.h  USBPhy_SAMD21.cpp  gpio_irq_api.c  us_ticker.c
mbed-external-targets/TARGET_Atmel/TARGET_SAM_CortexM0P/TARGET_SAMD21G18A/: CMakeLists.txt
mbed-external-targets/TARGET_Atmel/TARGET_SAM_CortexM0P/TARGET_SAMD21G18A/TARGET_XIAO_SAMD21/: CMakeLists.txt  PinNames.h  mbed_overrides.c
mbed-external-targets/TARGET_Atmel/TARGET_SAM_CortexM0P/TARGET_SAMD21G18A/device/TOOLCHAIN_GCC_ARM/: samd21g18a.ld  startup_samd21.c
mbed-external-targets/TARGET_Atmel/TARGET_SAM_CortexM0P/config/TARGET_SAMD21/: conf_clocks.h
mbed-external-targets/TARGET_Atmel/TARGET_SAM_CortexM0P/drivers/: CMakeLists.txt
mbed-external-targets/TARGET_Atmel/TARGET_SAM_CortexM0P/drivers/system/: system.c
mbed-external-targets/TARGET_Atmel/TARGET_SAM_CortexM0P/utils/: CMakeLists.txt  compiler.h
mbed-external-targets/TARGET_Atmel/TARGET_SAM_CortexM0P/utils/cmsis/TARGET_SAMD21/include/: samd21g18a.h
mbed-external-targets/TARGET_Atmel/common/: CMakeLists.txt
mbed-external-targets/TARGET_NXP/: CMakeLists.txt  custom_targets.json
mbed-external-targets/TARGET_NXP/TARGET_LPC11U6X/: CMakeLists.txt  USBPhyHw.cpp  USBPhyHw.h
test-hid-lpc11u8/: CMakeLists.txt  configure.sh  main.cpp  test-hid-lpc11u8.code-workspace
test-hid-samd21/: CMakeLists.txt  configure.sh  main.cpp  test-hid-samd21.code-workspace
